# docs/swagger.json
@@ -4,9 +4,146 @@
         "contact": {}
     },
     "paths": {
+        "/carousel/list": {
+            "get": {
+                "summary": "Carousel",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/category/list": {
+            "get": {
+                "summary": "Category",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/forestage/config": {
+            "get": {
+                "summary": "Forestage config",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/production/list": {
+            "get": {
+                "summary": "Production list",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "int default",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            15,
+                            20,
+                            30,
+                            40,
+                            50
+                        ],
+                        "type": "integer",
+                        "description": "int enums",
+                        "name": "pageLimit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "string enums",
+                        "name": "sort",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "PName",
+                            "PId",
+                            "PCategory",
+                            "PCreTime"
+                        ],
+                        "type": "string",
+                        "description": "string enums",
+                        "name": "sortColumn",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "",
+                        "description": "string default",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "",
+                        "description": "string default",
+                        "name": "searchCategory",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/production/rank/{count}": {
+            "get": {
+                "summary": "Production rank",
+                "operationId": "10",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "count",
+                        "name": "count",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
         "/production/{id}": {
             "get": {
-                "summary": "Production Id",
+                "summary": "Production detail",
                 "operationId": "1",
                 "parameters": [
                     {
