# internal/api/controller/forestage/base_forestage_controller.go
@@ -11,6 +11,9 @@ var (
 	BaseForestageConfig = controller.Handler(GetConfig)
 )
 
+// @Summary Forestage config
+// @Success 200 {json} json
+// @Router /forestage/config [get]
 func GetConfig(c *gin.Context) (controller.Data, error) {
 	baseForestageService := forestage.GetBaseForestageService()
 	return baseForestageService.GetBaseConfig()
