# internal/api/controller/forestage/carousel_controller.go
@@ -11,6 +11,9 @@ var (
 	CarouselList = controller.Handler(GetCarousel)
 )
 
+// @Summary Carousel
+// @Success 200 {json} json
+// @Router /carousel/list [get]
 func GetCarousel(c *gin.Context) (controller.Data, error) {
 	carouselService := forestage.GetCarouselService()
 	return carouselService.GetCarouselList()
