# internal/api/controller/forestage/categories_controller.go
@@ -11,6 +11,9 @@ var (
 	CategoryList = controller.Handler(GetCategory)
 )
 
+// @Summary Category
+// @Success 200 {json} json
+// @Router /category/list [get]
 func GetCategory(c *gin.Context) (controller.Data, error) {
 	categoryService := forestage.GetCategoryService()
 	return categoryService.GetCategoryList()
